--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?ac94fec4-c3b1-4d76-9d4c-506d63085019">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CL_rVj4U.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-aMJEeur.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/F1ZQXfj9.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CMhNC_Dl.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DqxcthpW.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D-89ngS8.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DaGVuW_O.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/kvSKRU7U.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dr4bKUAz.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?0eac255c-dd9b-4bb4-acb9-cecf6591f0f9">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Ru0degJC.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C0HCiFEc.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C0A26yf-.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/fLc26azs.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C7Ry0J72.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BlZCAyqW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DkKPYSCn.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DLdd7xv7.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/dNyLAUMc.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CL_rVj4U.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?ac94fec4-c3b1-4d76-9d4c-506d63085019">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736085897925]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"ac94fec4-c3b1-4d76-9d4c-506d63085019",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/Ru0degJC.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?0eac255c-dd9b-4bb4-acb9-cecf6591f0f9">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736086571963]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"0eac255c-dd9b-4bb4-acb9-cecf6591f0f9",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
