--- a/fontain/index.html
+++ b/fontain/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/fontain/_payload.json?0eac255c-dd9b-4bb4-acb9-cecf6591f0f9">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Ru0degJC.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BhmXZ_b4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BlZCAyqW.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/fLc26azs.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C0A26yf-.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/fontain/_payload.json?823494c4-f482-41ec-9851-c9c9c352c8d3">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CNg6Nnrk.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DeV-7hbt.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9qkpq8A.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/AED3Fxip.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/LgvhlSjN.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/69WXoClS.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CUD3Ugu9.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_ehUxmmb.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DkKPYSCn.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DLdd7xv7.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/dNyLAUMc.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bmdr-WQd.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CwQzfiXD.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/5c66sjaa.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BDJtfYsA.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CMDjI6sl.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D63oSfd2.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/Ru0degJC.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/fontain/_payload.json?0eac255c-dd9b-4bb4-acb9-cecf6591f0f9">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/fontain",1736086571962]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"0eac255c-dd9b-4bb4-acb9-cecf6591f0f9",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CNg6Nnrk.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/fontain/_payload.json?823494c4-f482-41ec-9851-c9c9c352c8d3">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/fontain",1736087717117]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"823494c4-f482-41ec-9851-c9c9c352c8d3",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
