--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?823494c4-f482-41ec-9851-c9c9c352c8d3">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CNg6Nnrk.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DgMkF_cL.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/LgvhlSjN.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/AED3Fxip.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-eFkuk0L.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9qkpq8A.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BDJtfYsA.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CMDjI6sl.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D63oSfd2.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?44e15b50-9674-4d68-bcce-af6058d49168">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CFwifhLd.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B_k_LJlJ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CCXlrt6M.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DztMiuJ4.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Fuc5q8rZ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/yhKpvEG4.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/ZQip1tYG.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B80Yonat.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DFeqlNOE.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CNg6Nnrk.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?823494c4-f482-41ec-9851-c9c9c352c8d3">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736087717118]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"823494c4-f482-41ec-9851-c9c9c352c8d3",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CFwifhLd.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?44e15b50-9674-4d68-bcce-af6058d49168">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736087872916]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"44e15b50-9674-4d68-bcce-af6058d49168",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
