--- a/works/fontain/index.html
+++ b/works/fontain/index.html
@@ -6,24 +6,22 @@
 <style>.loader-cont{align-items:center;background-color:#bc71ff;display:flex;height:100vh;justify-content:center;position:fixed;width:100vw;z-index:1000000}.loader{align-items:flex-start;aspect-ratio:1;display:flex;width:60px}.loader:after,.loader:before{aspect-ratio:1;content:"";flex:1;--g:conic-gradient(from -90deg at 10px 10px,#fff 90deg,#0000 0);animation:l20 1s infinite;background:var(--g),var(--g),var(--g);filter:drop-shadow(30px 30px 0 #fff)}.loader:after{transform:scaleX(-1)}@keyframes l20{0%{background-position:0 0,10px 10px,20px 20px}33%{background-position:10px 10px}66%{background-position:0 20px,10px 10px,20px 0}to{background-position:0 0,10px 10px,20px 20px}}.loader_bg{align-items:center;animation:noiseAnimation 3s ease-in-out infinite;background:radial-gradient(circle at 10% 20%,hsla(0,100%,70%,.8),transparent 50%),radial-gradient(circle at 80% 30%,rgba(102,102,255,.8),transparent 50%),radial-gradient(circle at 50% 80%,rgba(102,255,102,.8),transparent 50%);background-size:200% 200%;display:flex;height:100%;justify-content:center;opacity:.5;width:100%}@keyframes noiseAnimation{0%{background-position:0 0}50%{background-position:100% 100%}to{background-position:0 0}}</style>
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
-<link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/fontain/_payload.json?44e15b50-9674-4d68-bcce-af6058d49168">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CFwifhLd.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DgffHNhR.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/yhKpvEG4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DztMiuJ4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CCXlrt6M.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/fontain/_payload.json?e924cad4-5ca2-4b2b-977b-4c2022f3b6bd">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BFSr6SFM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CKwtiR4v.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ln8t7vx5.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DaspnhPz.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DFLYUnVQ.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DRtaDt4r.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DPDeziqC.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BQcxqAXt.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/ZQip1tYG.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B80Yonat.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DFeqlNOE.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/MJHp6IQt.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/as_NFxBo.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CHq0cgrV.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CqmB7cig.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/T_-_BQrD.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CFwifhLd.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/fontain/_payload.json?44e15b50-9674-4d68-bcce-af6058d49168">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/fontain",1736087872920]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"44e15b50-9674-4d68-bcce-af6058d49168",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BFSr6SFM.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/fontain/_payload.json?e924cad4-5ca2-4b2b-977b-4c2022f3b6bd">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/fontain",1736088211793]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"e924cad4-5ca2-4b2b-977b-4c2022f3b6bd",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
