--- a/works/moth/index.html
+++ b/works/moth/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Contact.CQKS7Qcw.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?44e15b50-9674-4d68-bcce-af6058d49168">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CFwifhLd.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BYMQ3dPJ.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CCXlrt6M.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?e924cad4-5ca2-4b2b-977b-4c2022f3b6bd">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BFSr6SFM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CxwRr6HU.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DFLYUnVQ.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DRtaDt4r.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DztMiuJ4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BIo11J2o.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CV9pKfGO.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DPDeziqC.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/ZQip1tYG.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B80Yonat.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DFeqlNOE.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/MJHp6IQt.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DaspnhPz.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CRIJClgX.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CQWS2kMP.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/as_NFxBo.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CHq0cgrV.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CqmB7cig.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/T_-_BQrD.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CFwifhLd.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?44e15b50-9674-4d68-bcce-af6058d49168">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736087872957]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"44e15b50-9674-4d68-bcce-af6058d49168",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BFSr6SFM.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?e924cad4-5ca2-4b2b-977b-4c2022f3b6bd">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736088211838]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"e924cad4-5ca2-4b2b-977b-4c2022f3b6bd",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
