--- a/about/index.html
+++ b/about/index.html
@@ -7,21 +7,21 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?e924cad4-5ca2-4b2b-977b-4c2022f3b6bd">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BFSr6SFM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/dcz-DjDN.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DFLYUnVQ.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/MJHp6IQt.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DaspnhPz.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/as_NFxBo.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ln8t7vx5.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CHq0cgrV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CqmB7cig.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/T_-_BQrD.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?8427affa-bd4b-4671-9d01-6c3e1f52f1fe">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BCde5Eu9.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DReJL0YL.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BG8LCpYw.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D0-qYiVH.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Csk1kId8.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DnycW17K.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_Z3HBHnd.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DdcVOh6y.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSoRV8Ey.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BtkMXSYx.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/BFSr6SFM.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?e924cad4-5ca2-4b2b-977b-4c2022f3b6bd">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736088211786]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"e924cad4-5ca2-4b2b-977b-4c2022f3b6bd",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BCde5Eu9.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?8427affa-bd4b-4671-9d01-6c3e1f52f1fe">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736088358119]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"8427affa-bd4b-4671-9d01-6c3e1f52f1fe",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
