--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?e924cad4-5ca2-4b2b-977b-4c2022f3b6bd">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BFSr6SFM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BfdNPjVv.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DFLYUnVQ.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?8427affa-bd4b-4671-9d01-6c3e1f52f1fe">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BCde5Eu9.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BqDKUCDO.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BG8LCpYw.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D70oIAVV.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DaspnhPz.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/as_NFxBo.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CBB5b-z0.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CHq0cgrV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CqmB7cig.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/T_-_BQrD.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DDrSOO7q.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Csk1kId8.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DnycW17K.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CjY6CoLd.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DdcVOh6y.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSoRV8Ey.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BtkMXSYx.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/BFSr6SFM.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?e924cad4-5ca2-4b2b-977b-4c2022f3b6bd">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736088211791]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"e924cad4-5ca2-4b2b-977b-4c2022f3b6bd",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BCde5Eu9.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?8427affa-bd4b-4671-9d01-6c3e1f52f1fe">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736088358124]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"8427affa-bd4b-4671-9d01-6c3e1f52f1fe",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
