--- a/about/index.html
+++ b/about/index.html
@@ -6,23 +6,22 @@
 <style>.loader-cont{align-items:center;background-color:#bc71ff;display:flex;height:100vh;justify-content:center;position:fixed;width:100vw;z-index:1000000}.loader{align-items:flex-start;aspect-ratio:1;display:flex;width:60px}.loader:after,.loader:before{aspect-ratio:1;content:"";flex:1;--g:conic-gradient(from -90deg at 10px 10px,#fff 90deg,#0000 0);animation:l20 1s infinite;background:var(--g),var(--g),var(--g);filter:drop-shadow(30px 30px 0 #fff)}.loader:after{transform:scaleX(-1)}@keyframes l20{0%{background-position:0 0,10px 10px,20px 20px}33%{background-position:10px 10px}66%{background-position:0 20px,10px 10px,20px 0}to{background-position:0 0,10px 10px,20px 20px}}.loader_bg{align-items:center;animation:noiseAnimation 3s ease-in-out infinite;background:radial-gradient(circle at 10% 20%,hsla(0,100%,70%,.8),transparent 50%),radial-gradient(circle at 80% 30%,rgba(102,102,255,.8),transparent 50%),radial-gradient(circle at 50% 80%,rgba(102,255,102,.8),transparent 50%);background-size:200% 200%;display:flex;height:100%;justify-content:center;opacity:.5;width:100%}@keyframes noiseAnimation{0%{background-position:0 0}50%{background-position:100% 100%}to{background-position:0 0}}</style>
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
-<link rel="stylesheet" href="/_nuxt/ChangeLanguage.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?943fa865-d7b7-4f08-baf4-cdf1b09faa1d">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BfZEuzu4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/cJgPJQIh.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CSsdNXL-.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CwFJU7A1.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D7v9mwOI.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/NMqYg9PM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CtWEk1Fz.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/P1UEfJK_.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bm5NvnUX.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/eHdm7sSF.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DRQgLU3n.js">
+<link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?440f6445-b833-41a1-b029-153b5bc69b5d">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DPbHuYoJ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_AMs0ZRW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DZk29dYW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DM5MBP5S.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B04WMtqr.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BshaDUb9.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Czzgyagd.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BrIWAi49.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/oLyWFdZv.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BGjF7X6_.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/BfZEuzu4.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?943fa865-d7b7-4f08-baf4-cdf1b09faa1d">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736133450083]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"943fa865-d7b7-4f08-baf4-cdf1b09faa1d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DPbHuYoJ.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?440f6445-b833-41a1-b029-153b5bc69b5d">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736133659759]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"440f6445-b833-41a1-b029-153b5bc69b5d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
