--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?440f6445-b833-41a1-b029-153b5bc69b5d">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DPbHuYoJ.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C7h1SLSf.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DZk29dYW.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B04WMtqr.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CqGZpv_7.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Czzgyagd.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BrIWAi49.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/oLyWFdZv.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BGjF7X6_.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?acb65884-3508-409b-a5c9-e9b6b61c325b">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DeJUvkL0.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B7TZ-zjz.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/KewPe7iF.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9UaOuIL.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BuUuObdV.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DX-3dphw.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DWGUGepl.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dc4tC4NM.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/gvo-xKbc.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DPbHuYoJ.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?440f6445-b833-41a1-b029-153b5bc69b5d">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736133659763]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"440f6445-b833-41a1-b029-153b5bc69b5d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DeJUvkL0.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?acb65884-3508-409b-a5c9-e9b6b61c325b">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736133761316]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"acb65884-3508-409b-a5c9-e9b6b61c325b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
