--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?60b0b407-408d-4828-82d9-1c290d6f7eae">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DHFA5uiQ.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DgRluWsO.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CMB4V5mF.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?f9621700-5ba4-43d3-b226-f649460203b7">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DwFVxUgA.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Z3nBp8PD.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DwnQGviW.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DMhn4Qbg.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Vs0CkTkF.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/NyoLbfDD.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D7am2w9r.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/pH_9CS5d.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/SfJV8u_H.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CxpTgPjW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DeE2AftH.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/XPZ3fyId.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BxndBcbQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BPjhouxx.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DeV5WDi9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Mou_JmSm.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DVUiEy_Y.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DHFA5uiQ.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?60b0b407-408d-4828-82d9-1c290d6f7eae">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736134093123]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"60b0b407-408d-4828-82d9-1c290d6f7eae",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DwFVxUgA.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?f9621700-5ba4-43d3-b226-f649460203b7">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736134287805]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"f9621700-5ba4-43d3-b226-f649460203b7",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
