--- a/works/moth/index.html
+++ b/works/moth/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Topbar.BLn_SlPF.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Contact.CQKS7Qcw.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?ec787ab7-bc57-4756-a232-986a634a6279">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-d_5gGkx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/0GBGEATA.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CkIFlfrK.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?5a32577e-3416-4ad5-b1da-2d01d8940121">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DiUGvF49.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/AkfmR2nm.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Duh03rYe.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/COMHpa5v.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/QhO6HEXm.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ByZyp0s_.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bp-xDQtz.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C_GCVOIY.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DyYrT8zR.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B2z68Rka.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C0tzbyAT.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cuhj5JfF.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BaxEZhTv.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/xmfh1JP9.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CitmyIMV.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CsSnM4cb.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CPXtkZpe.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Czmi8dhl.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DaJ7X59H.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/-d_5gGkx.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?ec787ab7-bc57-4756-a232-986a634a6279">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736135575027]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"ec787ab7-bc57-4756-a232-986a634a6279",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DiUGvF49.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?5a32577e-3416-4ad5-b1da-2d01d8940121">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736135752550]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"5a32577e-3416-4ad5-b1da-2d01d8940121",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
