--- a/works/moth/index.html
+++ b/works/moth/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Topbar.BLn_SlPF.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Contact.CQKS7Qcw.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?5a32577e-3416-4ad5-b1da-2d01d8940121">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DiUGvF49.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/AkfmR2nm.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Duh03rYe.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?2032b1a0-25ae-41b6-b165-63974bb6545c">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/J9oEVj47.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BR0DGykT.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ixrtv7JK.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cuhj5JfF.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BaxEZhTv.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/xmfh1JP9.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CitmyIMV.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CsSnM4cb.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CPXtkZpe.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Czmi8dhl.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DaJ7X59H.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/a3j-P0bs.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/4ZmEVqCO.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BZ3WgWjV.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BCtPEkd4.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B4jAZA4S.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B7Mge55h.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CZ2vvEJd.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BlV048J4.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DiUGvF49.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?5a32577e-3416-4ad5-b1da-2d01d8940121">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736135752550]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"5a32577e-3416-4ad5-b1da-2d01d8940121",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/J9oEVj47.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?2032b1a0-25ae-41b6-b165-63974bb6545c">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736135922121]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"2032b1a0-25ae-41b6-b165-63974bb6545c",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
